--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
 
   flutter_sticky_header: ^0.6.0
 
+  html: ^0.15.0
+
+  shared_preferences: any
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
